@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.5-Alpha1
+	- Fixed problem with flash player where random urls were not being
+		added correctly
 	- Fixed problem with user creation using old method (Thx Purdyk)
 	- Switched to SHA256() for API and Passwords
 	- Added check for BADTIME error code from Last.FM and correctly
